responsive design p1 - fix issues with section alignment

--- a/mediaQueries.css
+++ b/mediaQueries.css
@@ -10,7 +10,6 @@
     }
 
     .section-container {
-        width: ;
         flex-direction: column;
         gap: 2.5vh;
     }
